# udemy-causal-inference-entry

./: README.md  pyproject.toml  ruff.toml
data/: data1.csv  data2.csv  サンプル.xlsx
src/udemy_causual_inference_entry/: __init__.py  sample_code.ipynb
