[project]
name = "udemy-causual-inference-entry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.1",
    "dowhy>=0.11.1",
    "numpy==2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
]
